--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>marcela</h1>
-</body>
+<head class="cabecalho">                          
+<img class='cabecalho-imagem' src="" alt="logo do site">
+<ul>
+    <li>bem vindo</li>
+    <li>ao seu novo mundo</li>
+</ul>
+</html>  
+
 </html>
