--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <head class="cabecalho">                          
 <img class='cabecalho-imagem' src="" alt="logo do site">
 <ul>
-    <li>bem vindo</li>
-    <li>ao seu novo mundo</li>
-</ul>
+    <li class="cabecalho-lista-item">bem vindo</li>
+    <li class="cabecalho-lista-item">ao seu novo mundo</li>
+</ul class=cabecalho-lista>
+</header>
 </html>  
 
 </html>
