--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<body>  
 <head class="cabecalho">                          
 <img class='cabecalho-imagem' src="" alt="logo do site">
 <ul>
@@ -13,6 +15,11 @@
     <li class="cabecalho-lista-item">ao seu novo mundo</li>
 </ul class=cabecalho-lista>
 </header>
-</html>  
+<section class="nome">
+    <h2 class="kpop titulo">sobre kpop</h2>
+    p
+</section>
+</body>
 
-</html>
+</html>  
+ 
