--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </header>
 <section class="nome">
     <h2 class="kpop titulo">sobre kpop</h2>
-    p
+    <p class="site-texto-um">Esse site foi fundado em 2023 com o objetivo de informar fas de kpop.</p>
+    <img class="imagem" src="informação" alt="informação"
+    
 </section>
 </body>
 
